--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,112 +8,120 @@
     android:paddingRight="18dp"
     android:background="@drawable/login_background">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:background="@drawable/login_background"
+        android:orientation="vertical"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp">
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="250dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center_horizontal"
-                android:padding="16dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="16dp"
-                android:src="@drawable/ic_logo"/>
-
-            <EditText
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:ems="10"
-                android:id="@+id/editText_username"
-                android:background="@android:color/transparent"
-                android:padding="12dp"
-                android:drawablePadding="12dp"
-                android:hint="Username"
-                android:textColorHint="#fff"
-                />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#f9d7db" />
+                <ImageView
+                    android:layout_width="250dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="16dp"
+                    android:padding="16dp"
+                    android:src="@drawable/ic_logo" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:id="@+id/editText_Password"
-                android:drawablePadding="16dp"
-                android:padding="16dp"
-                android:hint="Password"
-                android:textColorHint="#fff"
-                android:background="@android:color/transparent"
-                android:maxLines="1"
-                android:layout_marginTop="4dp"
-                />
+                <EditText
+                    android:id="@+id/editText_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="12dp"
+                    android:ems="10"
+                    android:hint="Username"
+                    android:inputType="text"
+                    android:padding="12dp"
+                    android:textColorHint="#fff" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#f9d7db" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#f9d7db" />
 
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Remember me "
-                android:textColor="#fff"
-                />
+                <EditText
+                    android:id="@+id/editText_Password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="16dp"
+                    android:ems="10"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:padding="16dp"
+                    android:textColorHint="#fff" />
 
-            <Button
-                android:id="@+id/btnLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#fff"
-                android:text="Log in"
-                android:textAllCaps="false"
-                android:textStyle="normal"
-                android:clickable="true"
-                android:textSize="18sp"
-                android:textColor="#f16f71"
-                android:padding="16dp"
-                style="@style/TextAppearance.AppCompat.Body1"
-                android:layout_marginTop="32dp"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#f9d7db" />
 
-            <Button
-                android:id="@+id/register"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#f08b98"
-                android:text="Sign up"
-                android:textAllCaps="false"
-                android:textColor="#fff"
-                android:textStyle="normal"
-                android:textSize="18sp"
-                android:padding="16dp"
-                android:clickable="true"
-                style="@style/TextAppearance.AppCompat.Body1"
-                android:layout_marginTop="16dp"/>
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="Remember me "
+                    android:textColor="#fff" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Forget password? "
-                android:textColor="#fff"
-                android:padding="16dp"
-                android:clickable="true"
-                android:layout_marginBottom="16dp"
-                style="@style/TextAppearance.AppCompat.Body1"/>
+                <Button
+                    android:id="@+id/btnLogin"
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:background="#fff"
+                    android:clickable="true"
+                    android:padding="16dp"
+                    android:text="Log in"
+                    android:textAllCaps="false"
+                    android:textColor="#f16f71"
+                    android:textSize="18sp"
+                    android:textStyle="normal" />
+
+                <Button
+                    android:id="@+id/register"
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="#f08b98"
+                    android:clickable="true"
+                    android:padding="16dp"
+                    android:text="Sign up"
+                    android:textAllCaps="false"
+                    android:textColor="#fff"
+                    android:textSize="18sp"
+                    android:textStyle="normal" />
+
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:clickable="true"
+                    android:padding="16dp"
+                    android:text="Forget password? "
+                    android:textColor="#fff" />
+
+            </LinearLayout>
+        </ScrollView>
+
+    </LinearLayout>
 
 
-
-        </LinearLayout>
-    </ScrollView>
 
 </LinearLayout>
