--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/avatar"
-        android:text="Hello, Admin"
+        android:text="Hello "
         android:layout_marginTop="10dp"
         android:layout_marginRight="4dp"/>
     <ImageButton
