--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Chapter"
+        android:text="Full"
         android:id="@+id/textView_bookChapter"
         android:layout_alignBottom="@+id/imageView_bookImage"
         android:layout_alignLeft="@+id/textView_bookName"
